z-index issues fix

--- a/src/app/pages/home/components/news/news.component.scss
+++ b/src/app/pages/home/components/news/news.component.scss
@@ -31,7 +31,7 @@
         line-height: 1;
         border: none;
         cursor: pointer;
-        z-index: 10;
+        z-index: 5;
       }
     }
   }
@@ -75,5 +75,4 @@
       }
     }
   }
-
 }
