--- a/src/app/pages/home/components/our-values/our-values.component.scss
+++ b/src/app/pages/home/components/our-values/our-values.component.scss
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 20;
+    z-index: 5;
     display: flex;
     flex-direction: column;
     align-items: center;
