--- a/src/app/pages/home/components/teasing/teasing.component.scss
+++ b/src/app/pages/home/components/teasing/teasing.component.scss
@@ -58,7 +58,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    z-index: 200;
+    z-index: 5;
     gap: 2rem;
     padding: 4rem 0;
     text-align: center;
@@ -72,7 +72,7 @@
   }
 }
 
-#text{
+#text {
   position: absolute;
   color: #FFFFFF;
   left: 50%;
@@ -83,7 +83,7 @@
 /* height = 100 * (9 / 16) = 56.25 */
 @media (min-aspect-ratio: 16/9) {
   .teasing {
-    &__background{
+    &__background {
       iframe {
         /* height = 100 * (9 / 16) = 56.25 */
         height: 56.25vw;
